2009-01-25  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:
	
	Added empty_item method.
	Improved remove_item and remove_project methods using empty_item.
	
	*  watray/watraypluginmanagerview.vala:

	Use get_iter_from_string instead of a new TreePath.

2009-01-25  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayplugininterface.vala:
	*  watray/watraypluginmanagerview.vala:
	*  watray/watrayplugin.vala:

	Added configure support for plugins.

2009-01-25  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:
	*  watray/watrayprojectspanel.vala:
	*  watray/watrayprojectspanelinterface.vala:

	Added remove_project to the projects panel.

2009-01-24  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  po/es.po:

	Updated spanish translation.

2009-01-24  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simpleplugin.vala:
	
	Remove menu items when the plugin is deactivated.
	
	*  watray/watraypreferencemanager.vala:
	*  watray/watraymainwindow.vala:
	*  watray/watraypluginmanagerview.vala:
	*  watray/watraypreferencedialog.vala:

	Added plugins activated list support using gconf.

2009-01-22  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayplugininfo.vala:
	*  watray/watrayplugin.vala:

	Code cleanup.

2009-01-22  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simple.watrayplugin:
	
	Added Website and Copyright.
	
	*  watray/watraypreferencemanager.vala:
	
	Added basic activated plugins list
	
	*  watray/watrayplugininfo.vala:
	
	Added website and copyright properties. Return authors as an array.
	
	*  watray/watraymainwindow.vala:
	*  watray/watraypluginmanagerview.vala:
	
	Added about plugin dialog.
	
	*  watray/watraypluginmanager.vala:
	
	Get plugin by name.
	
2009-01-20  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:
	
	Added remove_item.
	
2009-01-20  Matias De la Puente  <mfpuente.ar@gmail.com>
	