@@ -37,9 +37,9 @@ public class Watray.Project: GLib.Object
 	public signal void selected ();
 	public signal void activated ();
 	public signal void removed ();
-	public signal void item_selected (string item_path, void* data);
-	public signal void item_activated (string item_path, void* data);
-	public signal void item_removed (string item_path, void* data);
+	public signal void item_selected (ItemInfo item_info);
+	public signal void item_activated (ItemInfo item_info);
+	public signal void item_removed (ItemInfo item_info);
 	
 	public Project (string name)
 	{
@@ -65,28 +65,28 @@ public class Watray.Project: GLib.Object
 		_projects_store = null;
 	}
 	
-	public void create_item (string item_path, void* data = null) throws ProjectError
+	public void create_item (string item_path, ItemInfo? item_info = null) throws ProjectError
 	{
 		var parent_iter = get_iter_from_item_path (Path.get_dirname (item_path));
 		TreeIter new_item_iter;
 		_projects_store.append (out new_item_iter, parent_iter);
-		_projects_store.set (new_item_iter, Columns.ITEM_NAME, Path.get_basename (item_path), Columns.PROJECT, this, Columns.ITEM_DATA, data);
+		_projects_store.set (new_item_iter, Columns.ITEM_NAME, Path.get_basename (item_path), Columns.PROJECT, this, Columns.ITEM_INFO, item_info);
 	}
 	
-	public void create_item_from_stock (string item_path, string stock_id, void* data = null) throws ProjectError
+	public void create_item_from_stock (string item_path, string stock_id, ItemInfo? item_info = null) throws ProjectError
 	{
 		var parent_iter = get_iter_from_item_path (Path.get_dirname (item_path));
 		TreeIter new_item_iter;
 		_projects_store.append (out new_item_iter, parent_iter);
-		_projects_store.set (new_item_iter, Columns.STOCK_ID, stock_id, Columns.ITEM_NAME, Path.get_basename (item_path), Columns.PROJECT, this, Columns.ITEM_DATA, data);
+		_projects_store.set (new_item_iter, Columns.STOCK_ID, stock_id, Columns.ITEM_NAME, Path.get_basename (item_path), Columns.PROJECT, this, Columns.ITEM_INFO, item_info);
 	}
 	
-	public void create_item_from_pixbuf (string item_path, Gdk.Pixbuf pixbuf, void* data = null) throws ProjectError
+	public void create_item_from_pixbuf (string item_path, Gdk.Pixbuf pixbuf, ItemInfo? item_info = null) throws ProjectError
 	{
 		var parent_iter = get_iter_from_item_path (Path.get_dirname (item_path));
 		TreeIter new_item_iter;
 		_projects_store.append (out new_item_iter, parent_iter);
-		_projects_store.set (new_item_iter, Columns.PIXBUF, pixbuf, Columns.ITEM_NAME, Path.get_basename (item_path), Columns.PROJECT, this, Columns.ITEM_DATA, data);
+		_projects_store.set (new_item_iter, Columns.PIXBUF, pixbuf, Columns.ITEM_NAME, Path.get_basename (item_path), Columns.PROJECT, this, Columns.ITEM_INFO, item_info);
 	}
 	
 	public void remove_item (string item_path) throws ProjectError
@@ -94,40 +94,43 @@ public class Watray.Project: GLib.Object
 		var iter = get_iter_from_item_path (item_path);
 		if (_projects_store.iter_has_child (iter))
 			empty_item (item_path);
-		void* data;
-		_projects_store.get (iter, Columns.ITEM_DATA, out data);
+		ItemInfo item_info;
+		_projects_store.get (iter, Columns.ITEM_INFO, out item_info);
 		_projects_store.remove (iter);
-		this.item_removed (item_path, data);
+		item_info.path = item_path;
+		this.item_removed (item_info);
 	}
 	
 	public void empty_item (string item_path) throws ProjectError
 	{
 		TreeIter iter;
 		string item_name;
-		void* data;
+		ItemInfo item_info;
 		var parent_iter = get_iter_from_item_path (item_path);
 		while (_projects_store.iter_children (out iter, parent_iter))
 		{
-			_projects_store.get (iter, Columns.ITEM_NAME, out item_name, Columns.ITEM_DATA, out data);
+			_projects_store.get (iter, Columns.ITEM_NAME, out item_name, Columns.ITEM_INFO, out item_info);
 			if (_projects_store.iter_has_child (iter))
 				empty_item (item_path + "/" + item_name);
 			_projects_store.remove (iter);
-			this.item_removed (item_path + "/" + item_name, data);
+			item_info.path = item_path + "/" + item_name;
+			this.item_removed (item_info);
 		}
 	}
 
-	public void set (string item_path, void* data) throws ProjectError
+	public void set (string item_path, ItemInfo item_info) throws ProjectError
 	{
 		var iter = get_iter_from_item_path (item_path);
-		_projects_store.set (iter, Columns.ITEM_DATA, data);
+		_projects_store.set (iter, Columns.ITEM_INFO, item_info);
 	}
 	
-	public void* get (string item_path) throws ProjectError
+	public ItemInfo get (string item_path) throws ProjectError
 	{
 		var iter = get_iter_from_item_path (item_path);
-		void* data;
-		_projects_store.get (iter, Columns.ITEM_DATA, out data);
-		return data;
+		ItemInfo item_info;
+		_projects_store.get (iter, Columns.ITEM_INFO, out item_info);
+		item_info.path = item_path;
+		return item_info;
 	}
 	
 	public void set_item_icon_from_stock (string item_path, string stock_id) throws ProjectError
